--- a/index.html
+++ b/index.html
@@ -7,3 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MARIO</title>
 </head>
+<body>
+   <div class="game">
+    <img class="mario" src="img/mario.gif" alt="mario">
+    <img class="pipe" src="img/pipe.png" alt="cano">
+    <img class="clouds" src="img/clouds.png" alt="nuvem">
+    <button class="start" onclick="startGame()">Iniciar</button>
+   </div>
