--- a/index.html
+++ b/index.html
@@ -14,3 +14,10 @@
     <img class="clouds" src="img/clouds.png" alt="nuvem">
     <button class="start" onclick="startGame()">Iniciar</button>
    </div>
+    <div class="game-over">
+      <h1>Game Over :(</h1>
+      <button onclick="restartGame()">Reiniciar</button>
+    </div>
+</body>
+<script src="script.js"></script>
+</html>
